// Copyright 2025 Logan Magee
//
// SPDX-License-Identifier: AGPL-3.0-only

syntax = "proto3";

package accrescent.directory.priv.v1;

option java_multiple_files = true;
option java_package = "app.accrescent.directory.priv.v1";

// A "next page" token returned in a ListAppListingsResponse
message ListAppListingsPageToken {
  // The last app ID returned in the ListAppListingsResponse. Required.
  optional string last_app_id = 1;
}
