// Copyright 2025 Logan Magee
//
// SPDX-License-Identifier: AGPL-3.0-only

syntax = "proto3";

package accrescent.directory.push.v1;

option java_multiple_files = true;
option java_package = "app.accrescent.directory.push.v1";

// Associated metadata for an object in object storage
message ObjectMetadata {
  // The uncompressed size of the object in bytes. Required.
  optional uint32 uncompressed_size = 1;
}
