// Copyright 2024 Logan Magee
//
// SPDX-License-Identifier: AGPL-3.0-only

syntax = "proto3";

package accrescent.directory.v1beta1;

import "accrescent/directory/v1beta1/split_download_info.proto";

option java_multiple_files = true;
option java_package = "app.accrescent.directory.v1beta1";

message AppDownloadInfo {
  // The total download size in bytes for this app or app update.
  optional uint32 download_size = 1;

  // Download info for each individual split APK
  repeated SplitDownloadInfo split_download_info = 2;

  // Verification info for the APKs. Instance of a SignedVerificationInfo message.
  // Uses the bytes type instead of the message type because protobuf encoding
  // is not canonical.
  // TODO: Clean up the comment here, the message name, and the verification info
  // stuff in general
  optional bytes signed_verification_info = 3;
}
