// Copyright 2024 Logan Magee
//
// SPDX-License-Identifier: AGPL-3.0-only

syntax = "proto3";

package accrescent.directory.v1beta1;

import "accrescent/directory/v1beta1/app_listing_view.proto";
import "accrescent/directory/v1beta1/device_attributes.proto";

option java_multiple_files = true;
option java_package = "app.accrescent.directory.v1beta1";

// Request defining parameters for retrieving multiple app listings.
message ListAppListingsRequest {
  // The maximum number of listings to return in the response. If
  // unspecified, defaults to 50. The maximum accepted value is 200, and all
  // requests with a higher page size will be capped to 200.
  optional uint32 page_size = 1;

  // An opaque page continuation token returned in a previous
  // ListAppListingsResponse. If unspecified (as is always the case with an
  // initial request), the first page is returned.
  optional string page_token = 2;

  // The number of listings to skip before returning results. Applies after the
  // page continuation token (if supplied).
  optional uint32 skip = 3;

  // The contents of the app listing which should be returned. If unspecified,
  // defaults to BASIC.
  optional AppListingView view = 4;

  // The current device's hardware and OS attributes used to determine app
  // compatibility, download size, etc. If unspecified, some app listing fields
  // may be omitted in the response (see AppListing for more details).
  DeviceAttributes device_attributes = 5;
}
